--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,12 @@
   box-shadow: 0px 3px 5px -1px #ccc;
 }
 
+.selct:hover > .selector,
+.selector:hover {
+  visibility: visible;
+  display: block;
+}
+
 .body_Drox:hover{
     color: #8549ba;
 }
