Crear Serie Lista

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,8 @@
 .selct:hover > .selector,
 .selector:hover {
   visibility: visible;
-  display: block;
+  display: flex;
+
 }
 
 .body_Drox:hover{
