--- a/src/App.css
+++ b/src/App.css
@@ -58,26 +58,6 @@
   transition: all 0.5s ease;
 }
 
-/* Modales */
-
-/* .overlay-base {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0);
-    opacity: 0;
-    transition-property: background-color, opacity;
-    transition-duration: 500ms;
-    transition-timing-function: ease-in-out;
-    outline: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} */
-
 .overlay-base {
    position: fixed;
    z-index: 20;
@@ -106,3 +86,45 @@
   width: auto;
   height: auto;
 }
+
+
+.input {
+  display: flex;
+  flex-direction: column-reverse;
+  position: relative;
+}
+.input + .input {
+  margin-top: 1px;
+}
+
+.input_label {
+  position: absolute;
+  top: 20px;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.input_field {
+  border: 0;
+  padding: 0;
+  z-index: 1;
+  background-color: transparent;
+  border-bottom: 2px solid #eee;
+  font: inherit;
+  font-size: 16px;
+  line-height: 30px;
+  user-select: none;
+}
+.input_field:focus, .input_field:valid {
+  outline: 0;
+  border-bottom-color: #c4c4c4;
+}
+.input_field:focus + .input_label, .input_field:valid + .input_label {
+  -moz-transform: translateY(-25px);
+  -ms-transform: translateY(-25px);
+  -webkit-transform: translateY(-25px);
+  transform: translateY(-25px);
+}
+
